--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,63 +1,81 @@
-<head th:replace="fragments :: head(Forside)"></head>
-<header th:replace="fragments :: header"></header>
+<head th:replace="~{fragments :: head(Forside)}">
+    <title>Forside</title>
+</head>
+<header th:replace="~{fragments :: header}"></header>
+
 <body>
 <main>
     <section class="hero">
         <div class="hero_text">
-            <h2>Bæredygtige.<br/>Dejlige.<br/>Fra Bornholm.</h2>
+            <h2>Bæredygtige.<br />Dejlige.<br />Fra Bornholm.</h2>
         </div>
         <a th:href="@{/product-page}">
-        <img th:src="@{/images/cupcake-hero.png}" alt="cupcake-hero" class="hero_image"/>
+            <img th:src="@{/images/cupcake-hero.png}" alt="cupcake-hero" class="hero_image" />
         </a>
     </section>
-
     <section class="content">
         <div class="green_box index">
             <a th:href="@{/product-page}" class="index_green_box">
-            <img th:src="@{/images/orderCupcake.png}" alt="Bestil cupcakes her!" class="order_cupcake_image">
+                <img th:src="@{/images/orderCupcake.png}" alt="Bestil cupcakes her!" class="order_cupcake_image">
             </a>
         </div>
         <p><strong> Smag vores cupcakes!</strong>
-            Bestil dem her! Vi har længe brugt det meste af vores dage på at perfektioner de mest fantastiske cupcakes.
-            De er friskbagte den dag du henter dem og matcher dine ønsker, vi har et udvalgt sortiment som du kan kigge igennem.
+            Bestil dem her! Vi har længe brugt det meste af vores dage på at perfektioner de mest fantastiske
+            cupcakes.
+            De er friskbagte den dag du henter dem og matcher dine ønsker, vi har et udvalgt sortiment som du kan
+            kigge igennem.
             Du skal både vælge en bund og en topping og selvfølgelig hvor mange du vil have.
-            Ved bestilling af over 100 cupcakes bedes du kontakte os på mail direkte.<a th:href="@{/product-page}"> Tryk her for at bestille</a>  </p> </p>
+            Ved bestilling af over 100 cupcakes bedes du kontakte os på mail direkte.<a th:href="@{/product-page}">
+                Tryk her for at bestille</a> </p>
     </section>
-
     <section class="content">
         <div class="green_box index">
             <a th:href="@{/registerPassword}" class="index_green_box">
-            <img th:src="@{/images/createUserCupcake.png}" alt="Opret dig her!" class="create_account_here_image">
+                <img th:src="@{/images/createUserCupcake.png}" alt="Opret dig her!"
+                     class="create_account_here_image">
             </a>
         </div>
         <p><strong>Opret dig her!</strong>
-            Det tager kun et øjeblik at komme i gang, og så er du klar til at udforske et univers fyldt med farver, smag og kreativitet.
-            Når du opretter dig, får du adgang til alle de lækre cupcakes og de mange muligheder for at tilpasse dem helt efter din egen stil.
+            Det tager kun et øjeblik at komme i gang, og så er du klar til at udforske et univers fyldt med farver,
+            smag og kreativitet.
+            Når du opretter dig, får du adgang til alle de lækre cupcakes og de mange muligheder for at tilpasse dem
+            helt efter din egen stil.
             <strong>Se alle de forskellige cupcakes!</strong>
-            Uanset om du elsker klassiske chokoladecupcakes, friske frugtvarianter eller vilde farvekombinationer, finder du noget for enhver smag.
-            Gennemse det store udvalg og lad dig inspirere af de mange designs, smage og toppings, du kan vælge imellem.
+            Uanset om du elsker klassiske chokoladecupcakes, friske frugtvarianter eller vilde farvekombinationer,
+            finder du noget for enhver smag.
+            Gennemse det store udvalg og lad dig inspirere af de mange designs, smage og toppings, du kan vælge
+            imellem.
             <strong>Skab din egen personlige cupcake!</strong>
-            Slip fantasien løs og lav din helt unikke cupcake, der afspejler din personlighed. Vælg farver, pynt og smag,
-            og vis dit mesterværk frem til dine venner og familie – måske bliver du den næste cupcake-kreatør i vennekredsen. <a th:href="@{/registerPassword}"> Tryk her for at oprette bruger</a></p></p>
+            Slip fantasien løs og lav din helt unikke cupcake, der afspejler din personlighed. Vælg farver, pynt og
+            smag,
+            og vis dit mesterværk frem til dine venner og familie – måske bliver du den næste cupcake-kreatør i
+            vennekredsen. <a th:href="@{/registerPassword}"> Tryk her for at oprette bruger</a>
+        </p>
     </section>
-
     <section class="content" th:action="@{/about}">
         <div class="green_box index">
-        <a th:href="@{/about}" class="index_green_box">
-        <img th:src="@{/images/about-us.png}" alt="Om os" class="about_us_image">
-        </a>
+            <a th:href="@{/about}" class="index_green_box">
+                <img th:src="@{/images/about-us.png}" alt="Om os" class="about_us_image">
+            </a>
         </div>
-
         <p><strong>Om os</strong>
-            Vi elsker cupcakes – og vi tror på, at alle fortjener lidt sødme i hverdagen! Vores mål er at skabe et sted,
-            hvor kreativitet og smag mødes, og hvor du kan slippe fantasien løs og designe dine egne unikke cupcakes.
-        <strong>Vores passion</strong>
-            Bag vores univers står et lille team af passionerede bagere og designelskere, der elsker at eksperimentere
-            med farver, former og smage. Vi arbejder hele tiden på at udvikle nye idéer, så du kan finde inspiration og skabe cupcakes, der både ser fantastiske ud og smager himmelsk.
-        <strong>Vores fællesskab</strong>
-            Vi tror på, at det er sjovere at dele glæden med andre. Derfor kan du hos os vise dine kreationer frem til venner, familie og andre cupcake-entusiaster.
-            Sammen fejrer vi kreativitet, hygge og alt det, der gør cupcakes til noget helt særligt. <a th:href="@{/about}"> Tryk her for at læse mere om os</a></p></p>
+            Vi elsker cupcakes – og vi tror på, at alle fortjener lidt sødme i hverdagen! Vores mål er at skabe et
+            sted,
+            hvor kreativitet og smag mødes, og hvor du kan slippe fantasien løs og designe dine egne unikke
+            cupcakes.
+            <strong>Vores passion</strong>
+            Bag vores univers står et lille team af passionerede bagere og designelskere, der elsker at
+            eksperimentere
+            med farver, former og smage. Vi arbejder hele tiden på at udvikle nye idéer, så du kan finde inspiration
+            og skabe cupcakes, der både ser fantastiske ud og smager himmelsk.
+            <strong>Vores fællesskab</strong>
+            Vi tror på, at det er sjovere at dele glæden med andre. Derfor kan du hos os vise dine kreationer frem
+            til venner, familie og andre cupcake-entusiaster.
+            Sammen fejrer vi kreativitet, hygge og alt det, der gør cupcakes til noget helt særligt. <a
+                    th:href="@{/about}"> Tryk her for at læse mere om os</a>
+        </p>
     </section>
 </main>
-<footer th:replace="fragments :: footer"></footer>
+<footer th:replace="~{fragments :: footer}"></footer>
+<!--<script src="/js/script.js"></script>-->
 </body>
