--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,9 +10,9 @@
         <div class="input_container">
             <form class="login_form" th:action="@{/login}" method="POST">
                 <label for="email">e-mail:</label>
-                <input type="email" id="email" name="email" value="ex@tv.dk" required />
+                <input type="email" id="email" name="email" required />
                 <label for="password">Adgangskode:</label>
-                <input type="password" id="password" name="password" value="1234" required />
+                <input type="password" id="password" name="password"  required />
                 <button type="submit">Log ind</button>
             </form>
             <p th:if="${session.errorLogin != null}" th:text="${session.errorLogin}"></p>
