--- a/src/main/resources/templates/pay-page.html
+++ b/src/main/resources/templates/pay-page.html
@@ -20,5 +20,5 @@
         </div>
     </section>
 </main>
-<footer th:replace="fragments :: footer"></footer>
+<footer th:replace="~{fragments :: footer}"></footer>
 </body>
