--- a/src/main/resources/templates/product-page.html
+++ b/src/main/resources/templates/product-page.html
@@ -66,6 +66,6 @@
     </div>
     </div>
 </main>
-<footer th:replace="fragments :: footer"></footer>
+<footer th:replace="~{fragments :: footer}"></footer>
 <script src="/js/script.js"></script>
 </body>
