updated order_id session attribute

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -13,19 +13,41 @@
     </section>
     <section class="content">
         <div class="green_box_about"></div>
-        <p>Emil</p>
+        <p> <strong>🧁 Vores Eventyr Begynder i Olskerng></strong>
+            <br/>
+            Olsker Cupcakes er født midt i Bornholms bakkede landskab,
+            hvor frisk luft, gode råvarer og kreativitet mødes.
+            Vi startede som et lille økologisk iværksættereventyr – drevet af kærligheden til smag,
+            kvalitet og en god portion bornholmsk stædighed.</p>
     </section>
     <section class="content">
         <div class="green_box_about"></div>
-        <p>Frederik</p>
+        <p><strong>🌿 Økologi Med Sjæl</strong>
+            <br/>
+            Hos os er økologi ikke bare et stempel – det er en livsstil.
+            Vi bruger lokale råvarer, så langt det kan lade sig gøre,
+            og lader naturen sætte tempoet. Hver cupcake bliver lavet fra bunden,
+            med omtanke for både smag og miljø.</p>
     </section>
     <section class="content">
         <div class="green_box_about"></div>
-        <p>Luke</p>
+        <p> <strong>🧠 Et Strejf af København</strong>
+            <br/>
+            Et par kreative sjæle fra København har givet os et frisk pust – de kom forbi bageriet,
+            delte idéer og tegnede de første streger til vores drømmeunivers.
+            Kombinationen af bornholmsk ro og københavnsk energi har givet vores cupcakes deres unikke udtryk.</p>
     </section>
     <section class="content">
         <div class="green_box_about"></div>
-        <p>Daniel</p>
+        <p> <strong> Den Helt Rigtige Opskrift </strong>
+            <br/>
+            Vi tror på, at hemmeligheden bag en god cupcake ligger i balancen – mellem det søde, det enkle og det ærlige.
+            Vi må være ærlige at sige at vores blue cheese icing er den smag der definerer os mest.
+            Brug vores DISCOUNTCODE: Jesper
+            <br/>
+            og få 50% rabat
+            <br/>
+            Hos Olsker Cupcakes handler det om at skabe noget, der smager af håndværk, kærlighed og lidt eventyr.</p>
     </section>
 </main>
 <footer th:replace="~{fragments :: footer}"></footer>
